objects/CN_Sales_Order_Note__c.object
<CustomObject>
    <fields>
        <fullName>CN_Note_Type__c</fullName>
        <label>Text Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>tbd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Note__c</fullName>
        <label>Text</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Order_Number__c</fullName>
        <label>Sales Order Number</label>
        <referenceTo>CN_Sales_Order__c</referenceTo>
        <relationshipLabel>Sales Order Note</relationshipLabel>
        <relationshipName>Sales_Order_Note</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CN_Up_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Up Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Sales Order Note</label>
    <nameField>
        <label>Sales Order Note</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Note</pluralLabel>
    <recordTypes>
        <fullName>CN_Sales_Order_Note</fullName>
        <active>true</active>
        <label>CN Sales Order Note</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>